05-oauth2-proxy-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - image: bitnami/oauth2-proxy:3.2.0
        name: oauth2-proxy
        args:
        - --http-address=0.0.0.0:4180
        - --email-domain=*
      volumes:
        - name: oauth2-secret-volume
          secret:
            secretName: oauth2-proxy-secrets
