03-syncthing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-syncthing
  labels:
    run: syncthing
spec:
  ports:
  - port: 8384
    protocol: TCP
    targetPort: 8384
  selector:
    run: syncthing
  type: NodePort
