06-oauth2-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: svc-oauth2-proxy
  name: svc-oauth2-proxy
spec:
  ports:
  - port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    run: oauth2-proxy
  type: NodePort
