07-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod

  name: st-ingress
spec:
  tls:
  - hosts:
    - st-agustindona.kube.um.edu.ar
    secretName: letsencrypt-agustindona
  rules:
  - host: st-agustindona.kube.um.edu.ar
    http:
      paths:
      - path: /
        backend:
          serviceName: svc-syncthing
          servicePort: 8384
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing-oauth2-proxy
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #kubernetes.io/tls-acme: "true"
    #kubernetes.io/ingress.class: "nginx"

spec:
  rules:
  - host: st-agustindona.kube.um.edu.ar
    http:
      paths:
      - path: /oauth2
        backend:
          serviceName: svc-oauth2-proxy
          servicePort: 4180
